--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
   height: 100px;
   display: inline;
   font-size: 30px;
-  color: #445599;
+  color: ##66B3FF;
   background-color: #9fffff;
 }
 h1{
